--- a/index.html
+++ b/index.html
@@ -6,12 +6,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PdgnCo</title>
     <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/site.css" rel="stylesheet">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
   <body>
-    <h1>pdgn.co</h1>
+    <div class="container-fluid">
+      <div class="header row">
+        <div class="col-sm-offset-5 col-sm-2 center">
+            <div class="title">PdgnCo</div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-offset-3 col-sm-6 content">
+          <h4>What is PdgnCo?</h4>
+          <p>PdgnCo (or pdgn for short) is a small IRC network founded on October 27th, 2014 by 
+             <a href="http://aaronweiss.us">Aaron Weiss</a> as a bastion of democratic autonomism on 
+             the Internet. We also operate a community blog that can be found 
+             <a href="http://blog.pdgn.co">here</a>. You'll find both insightful writings from 
+             community members, as well as network status updates there. Pdgn aims to consistently 
+             embody the spirit and values of its community.</p>
+          <h4>What are these values?</h4>
+          <ol>           
+            <li>Education &dash; This network is a place of learning, and aims to encourage it when possible.</li> 
+            <li>Democracy &dash; All major network decisions are decided publicly in <code>#pdgn</code>.</li>
+            <li>Autonomy &dash; Server operators will only intervene for the health of the network.</li>           
+            <li>Free Speech &dash; Censorship of any kind is not condoned on this network.</li>
+            <li>Privacy &dash; There is absolutely no server-side logging on the network.</li>
+          </ol>
+          <h4>How do I access Pdgn?</h4>
+          <p>You can access the network via your favorite IRC client. For graphical clients, we 
+             recommend the aptly-named <a href="http://pidgin.im">Pidgin</a> on Windows and Linux, and 
+             <a href="http://www.codeux.com/textual/">Textual</a> on OS X. In the way of terminal 
+             clients, many of our members swear by <a href="https://weechat.org">weechat</a>. Once 
+             you've found a client, you can connect to the  network via 
+             <a href="ircs://irc.pdgn.co:6697">irc.pdgn.co</a>. It's important to note that the 
+             network is only accessible over SSL, and uses the standard SSL port 6697. You may wish
+             to access a regional server instead. Below you'll find a table of in-network servers,
+             and their approximate locations.</p>
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Server Name</th>
+                <th>Server Address</th>
+                <th>Server Location</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Columba</td>
+                <td>columba.pdgn.co</td>
+                <td>New York, NY</td>
+              </tr>
+              <tr>
+                <td>Raphus</td>
+                <td>raphus.pdgn.co</td>
+                <td>San Francisco, CA</td>
+              </tr>
+            </tbody>
+          </table>
+          <h4>How is Pdgn operated?</h4>
+          <p>Pdgn is currently operated solely by its founder, 
+             <a href="http://aaronweiss.us/">Aaron Weiss</a>. This means that there's absolutely no
+             administrative bureaucracy of any sort, and there's only one person that you have to
+             trust to keep the network values uncompromised. You can find him on the network as 
+             <code>awe</code>, where he's just about always hanging around in <code>#pdgn</code>.</p>
+          <p>Pdgn is currently funded out of pocket by its founder, but also accepts donations. 
+             Donations can be made via Bitcoin to the official PdgnCo wallet,
+             <code>1BZmyVhDu3p6xqsnat81fYD7hm3ZqR2bf</code>. All donations will go immediately 
+             towards paying for existing and additional network hardware. Maintenance of the 
+             network is a volunteer service, and as such, none of the donations will be taken for 
+             personal use. As a current fundraising goal, we hope to open a server in Europe soon.</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
