Added information about Hyperboria.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,35 @@
               </tr>
             </tbody>
           </table>
+          <p>Perhaps uniquely, Pdgn is also accessible in its entirety over 
+             <a href="http://hyperboria.net">Hyperboria</a>, a secure and decentralized network 
+             using <a href="http://cjdns.info">cjdns</a>. As a general rule of thumb, everything can 
+             be accessed through Hyperboria by prepending <code>h.</code> to its address. So,
+             general network access is available via 
+             <a href="ircs://h.irc.pdgn.co:6697">h.irc.pdgn.co</a>. Although cjdns has network-level
+             encryption in place, for logistical reasons, you must still connect with SSL. Below
+             you'll find a reproduction of the earlier table but with their Hyperboria addresses.</p>
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>Server Name</th>
+                <th>Server Hyperboria Address</th>
+                <th>Server Location</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Columba</td>
+                <td>h.columba.pdgn.co</td>
+                <td>New York, NY</td>
+              </tr>
+              <tr>
+                <td>Raphus</td>
+                <td>h.raphus.pdgn.co</td>
+                <td>San Francisco, CA</td>
+              </tr>
+            </tbody>
+          </table>
           <h4>How is Pdgn operated?</h4>
           <p>Pdgn is currently operated solely by its founder, 
              <a href="http://aaronweiss.us/">Aaron Weiss</a>. This means that there's absolutely no
