Updated phrasing on Hyperboria section.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
              general network access is available via 
              <a href="ircs://h.irc.pdgn.co:6697">h.irc.pdgn.co</a>. Although cjdns has network-level
              encryption in place, for logistical reasons, you must still connect with SSL. Below
-             you'll find a reproduction of the earlier table but with their Hyperboria addresses.</p>
+             you'll find a reproduction of the earlier table but with each server's Hyperboria address.</p>
           <table class="table table-striped">
             <thead>
               <tr>
