Updated table header for Hyperboria table.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <thead>
               <tr>
                 <th>Server Name</th>
-                <th>Server Hyperboria Address</th>
+                <th>Hyperboria Address</th>
                 <th>Server Location</th>
               </tr>
             </thead>
