Added a warrant canary.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
              the Internet. We also operate a community blog that can be found 
              <a href="http://blog.pdgn.co">here</a>. You'll find both insightful writings from 
              community members, as well as network status updates there. Pdgn aims to consistently 
-             embody the spirit and values of its community.</p>
+             embody the spirit and values of its community. We have a 
+             <a href="https://en.wikipedia.org/wiki/Warrant_canary">warrant canary</a> posted
+             <a href="./canary.txt">here</a>.</p>
           <h4>What are these values?</h4>
           <ol>           
             <li>Education &dash; This network is a place of learning, and aims to encourage it when possible.</li> 
