Added Pidgey to the site.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="container-fluid">
       <div class="header row">
         <div class="col-sm-offset-5 col-sm-2 center">
+            <div class="pidgey"><img src="./img/pidgey.svg" alt="Pidgey: the pdgn mascot" width="50%"></div>
             <div class="title">PdgnCo</div>
         </div>
       </div>
