Added credits for Pidgey.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
              community members, as well as network status updates there. Pdgn aims to consistently 
              embody the spirit and values of its community. We have a 
              <a href="https://en.wikipedia.org/wiki/Warrant_canary">warrant canary</a> posted
-             <a href="./canary.txt">here</a>.</p>
+             <a href="./canary.txt">here</a>. Our mascot's name is Pidgey. She was lovingly designed
+             by the talented <a href="http://apdenoatis.deviantart.com/">Shannon Sheu</a>, and
+             vectorized by Grant Wu.</p>
           <h4>What are these values?</h4>
           <ol>           
             <li>Education &dash; This network is a place of learning, and aims to encourage it when possible.</li> 
