--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
                 <td>raphus.pdgn.co</td>
                 <td>San Francisco, CA</td>
               </tr>
+              <tr>
+                <td>Turtur</td>
+                <td>turtur.pdgn.co</td>
+                <td>Frankfurt, Germany</td>
+              </tr>
             </tbody>
           </table>
           <p>Perhaps uniquely, Pdgn is also accessible in its entirety over 
@@ -99,6 +104,11 @@
                 <td>h.raphus.pdgn.co</td>
                 <td>San Francisco, CA</td>
               </tr>
+              <tr>
+                <td>Turtur</td>
+                <td>h.turtur.pdgn.co</td>
+                <td>Frankfurt, Germany</td>
+              </tr>
             </tbody>
           </table>
           <h4>How is Pdgn operated?</h4>
@@ -112,7 +122,7 @@
              <code>1BZmyVhDu3p6xqsnat81fYD7hm3ZqR2bf</code>. All donations will go immediately 
              towards paying for existing and additional network hardware. Maintenance of the 
              network is a volunteer service, and as such, none of the donations will be taken for 
-             personal use. As a current fundraising goal, we hope to open a server in Europe soon.</p>
+             personal use.</p>
         </div>
       </div>
     </div>
