cjdns and turtur are dead (possibly just for now)

--- a/index.html
+++ b/index.html
@@ -71,49 +71,49 @@
               <td>raphus.pdgn.co</td>
               <td>San Francisco, CA</td>
             </tr>
-            <tr>
-              <td>Turtur</td>
-              <td>turtur.pdgn.co</td>
-              <td>Frankfurt, Germany</td>
-            </tr>
+            <!-- <tr>
+                 <td>Turtur</td>
+                 <td>turtur.pdgn.co</td>
+                 <td>Frankfurt, Germany</td>
+                 </tr> -->
           </tbody>
         </table>
-        <p>
-          Perhaps uniquely, Pdgn is also accessible in its entirety over
-          <a href="http://hyperboria.net">Hyperboria</a>, a secure and decentralized network
-          using <a href="http://cjdns.info">cjdns</a>. As a general rule of thumb, everything can
-          be accessed through Hyperboria by prepending <code>h.</code> to its address. So,
-          general network access is available via
-          <a href="ircs://h.irc.pdgn.co:6697">h.irc.pdgn.co</a>. Although cjdns has network-level
-          encryption in place, for logistical reasons, you must still connect with SSL. Below
-          you'll find a reproduction of the earlier table but with each server's Hyperboria address.
-        </p>
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th>Server Name</th>
-              <th>Hyperboria Address</th>
-              <th>Server Location</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Columba</td>
-              <td>h.columba.pdgn.co</td>
-              <td>New York, NY</td>
-            </tr>
-            <tr>
-              <td>Raphus</td>
-              <td>h.raphus.pdgn.co</td>
-              <td>San Francisco, CA</td>
-            </tr>
-            <tr>
-              <td>Turtur</td>
-              <td>h.turtur.pdgn.co</td>
-              <td>Frankfurt, Germany</td>
-            </tr>
-          </tbody>
-        </table>
+        <!-- <p>
+             Perhaps uniquely, Pdgn is also accessible in its entirety over
+             <a href="http://hyperboria.net">Hyperboria</a>, a secure and decentralized network
+             using <a href="http://cjdns.info">cjdns</a>. As a general rule of thumb, everything can
+             be accessed through Hyperboria by prepending <code>h.</code> to its address. So,
+             general network access is available via
+             <a href="ircs://h.irc.pdgn.co:6697">h.irc.pdgn.co</a>. Although cjdns has network-level
+             encryption in place, for logistical reasons, you must still connect with SSL. Below
+             you'll find a reproduction of the earlier table but with each server's Hyperboria address.
+             </p>
+             <table class="table table-striped">
+             <thead>
+             <tr>
+             <th>Server Name</th>
+             <th>Hyperboria Address</th>
+             <th>Server Location</th>
+             </tr>
+             </thead>
+             <tbody>
+             <tr>
+             <td>Columba</td>
+             <td>h.columba.pdgn.co</td>
+             <td>New York, NY</td>
+             </tr>
+             <tr>
+             <td>Raphus</td>
+             <td>h.raphus.pdgn.co</td>
+             <td>San Francisco, CA</td>
+             </tr>
+             <tr>
+             <td>Turtur</td>
+             <td>h.turtur.pdgn.co</td>
+             <td>Frankfurt, Germany</td>
+             </tr>
+             </tbody>
+             </table> -->
         <h1>How does Pdgn operate?</h1>
         <p>
           Pdgn is maintained solely by its founder, <a href="https://aaronweiss.us/">Aaron
