change website to reflect pdgn closure

--- a/index.html
+++ b/index.html
@@ -18,109 +18,19 @@
       <section class="copy">
         <h1 class="lead">What is PdgnCo?</h1>
         <p>
-          PdgnCo (or pdgn for short) is a small IRC network founded on October 27th, 2014 by
+          PdgnCo (or pdgn for short) was a small IRC network founded on October 27th, 2014 by
           <a href="https://aaronweiss.us/">Aaron Weiss</a> as an autonomous internet community to
-          discuss tech, software, politics, media, and more. Its goal is to exist as a friendly,
+          discuss tech, software, politics, media, and more. Its goal was to exist as a friendly,
           inclusive space for community discussion on an internet increasingly dominated by just a
-          few multinational corporations. Pdgn reflects and embodies the spirit and values of its
-          community. For transparency, we have a
-          <a href="https://en.wikipedia.org/wiki/Warrant_canary">warrant canary</a> posted
-          <a href="./canary.txt">here</a>.
+          few multinational corporations. Pdgn was officially shut down on July 4th, 2020.
         </p>
-        <h1>What are these values?</h1>
-        <ol>
-          <li>
-            Transparency &ndash; All major network decisions are decided publicly in
-            <code>#pdgn</code>.
-          </li>
-          <li>
-            Autonomy &ndash; Administrators only intervene for the health of the network.
-          </li>
-          <li>Privacy &ndash; There is no server-side chat logging or inspection whatsoever.</li>
-          <li>Education &ndash; pdgn is a place of learning, and aims to encourage it always.</li>
-          <li>Community &ndash; pdgn aims to foster friendship and compelling conversation.</li>
-        </ol>
-        <h1>How do I access Pdgn?</h1>
+        <h1>How did Pdgn operate?</h1>
         <p>
-          You can access the network via your favorite IRC client. For graphical clients, we
-          recommend the aptly-named <a href="https://pidgin.im">Pidgin</a> on Windows and Linux, and
-          <a href="https://www.codeux.com/textual/">Textual</a> on macOS. In the way of terminal
-          clients, many of our members swear by <a href="https://weechat.org">weechat</a>. Once
-          you've found a client, you can connect to the  network via
-          <a href="ircs://irc.pdgn.co:6697">irc.pdgn.co</a>. It's important to note that the
-          network is only accessible over SSL, and uses the standard SSL port <code>6697</code>. For
-          better latency, you may wish to access a regional server instead. Below you'll find a
-          table of our servers, and their locations.
-        </p>
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th>Server Name</th>
-              <th>Server Address</th>
-              <th>Server Location</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Columba</td>
-              <td>columba.pdgn.co</td>
-              <td>New York, NY</td>
-            </tr>
-            <tr>
-              <td>Raphus</td>
-              <td>raphus.pdgn.co</td>
-              <td>San Francisco, CA</td>
-            </tr>
-            <!-- <tr>
-                 <td>Turtur</td>
-                 <td>turtur.pdgn.co</td>
-                 <td>Frankfurt, Germany</td>
-                 </tr> -->
-          </tbody>
-        </table>
-        <!-- <p>
-             Perhaps uniquely, Pdgn is also accessible in its entirety over
-             <a href="http://hyperboria.net">Hyperboria</a>, a secure and decentralized network
-             using <a href="http://cjdns.info">cjdns</a>. As a general rule of thumb, everything can
-             be accessed through Hyperboria by prepending <code>h.</code> to its address. So,
-             general network access is available via
-             <a href="ircs://h.irc.pdgn.co:6697">h.irc.pdgn.co</a>. Although cjdns has network-level
-             encryption in place, for logistical reasons, you must still connect with SSL. Below
-             you'll find a reproduction of the earlier table but with each server's Hyperboria address.
-             </p>
-             <table class="table table-striped">
-             <thead>
-             <tr>
-             <th>Server Name</th>
-             <th>Hyperboria Address</th>
-             <th>Server Location</th>
-             </tr>
-             </thead>
-             <tbody>
-             <tr>
-             <td>Columba</td>
-             <td>h.columba.pdgn.co</td>
-             <td>New York, NY</td>
-             </tr>
-             <tr>
-             <td>Raphus</td>
-             <td>h.raphus.pdgn.co</td>
-             <td>San Francisco, CA</td>
-             </tr>
-             <tr>
-             <td>Turtur</td>
-             <td>h.turtur.pdgn.co</td>
-             <td>Frankfurt, Germany</td>
-             </tr>
-             </tbody>
-             </table> -->
-        <h1>How does Pdgn operate?</h1>
-        <p>
-          Pdgn is maintained solely by its founder, <a href="https://aaronweiss.us/">Aaron
+          Pdgn was maintained solely by its founder, <a href="https://aaronweiss.us/">Aaron
           Weiss</a>&mdash;known around these parts as <code>awe</code>. The day-to-day decisions
-          about maintenance are largely decided by him, but are all reported publicly in
-          <code>#pdgn</code>. Community opinions are incorporated into every major decision about
-          the network. The network is hosted on <a href="https://digitalocean.com">DigitalOcean</a>
+          about maintenance were largely decided by him, but were all reported publicly in
+          <code>#pdgn</code>. Community opinions were incorporated into every major decision about
+          the network. The network was hosted on <a href="https://digitalocean.com">DigitalOcean</a>
           and funded out-of-pocket by <code>awe</code>. Pdgn has an official mascot named Pidgey.
           She was lovingly designed by <a href="http://apdenoatis.deviantart.com/">Shannon Sheu</a>,
           and later carefully vectorized by Grant Wu.
