tweak copy a bit

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a href="https://aaronweiss.us/">Aaron Weiss</a> as an autonomous internet community to
           discuss tech, software, politics, media, and more. Its goal was to exist as a friendly,
           inclusive space for community discussion on an internet increasingly dominated by just a
-          few multinational corporations. Pdgn was officially shut down on July 4th, 2020.
+          few multinational corporations. Pdgn officially shut down on July 4th, 2020.
         </p>
         <h1>How did Pdgn operate?</h1>
         <p>
